--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,11 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
     "paper-input": "PolymerElements/paper-input#^1.1.20",
     "paper-button": "PolymerElements/paper-button#^1.0.13",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.1"
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.1",
+    "paper-fab-menu": "advanced-rest-client/paper-fab-menu#^2.0.4",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.8",
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
+    "app-pouchdb": "advanced-rest-client/app-pouchdb#^0.9.3"
   },
   "ignore": [
     "**/.*",
