--- a/bower.json
+++ b/bower.json
@@ -1,39 +1,39 @@
 {
   "name": "app-pouchdb-quick-search",
-  "description": "Web component for the PouchDB's  plugin.",
-  "author": "The Advanced REST client authors",
+  "description": "Web component for PouchDB quick search plugin",
+  "version": "2.0.0",
+  "license": "Apache-2.0",
+  "authors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors"
+  ],
   "keywords": [
     "web-components",
     "polymer"
   ],
   "private": true,
-  "main": [
-    "app-pouchdb-quick-search.html"
-  ],
+  "main": "app-pouchdb-quick-search.html",
   "repository": {
     "type": "git",
     "url": "git@github.com:advanced-rest-client/app-pouchdb-quick-search.git"
   },
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0",
-    "app-pouchdb": "advanced-rest-client/app-pouchdb#^1.0.0",
-    "pouchdb-quick-search": "^1.2.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "pouchdb-quick-search": "^1.3.0"
   },
   "devDependencies": {
-    "iron-component-page": "polymerelements/iron-component-page#1.0.0",
-    "web-component-tester": "^6.0.0",
-    "paper-styles": "polymerelements/paper-styles#^1.0.2",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "iron-test-helpers": "PolymerElements/iron-test-helpers#^1.4.0",
-    "test-fixture": "PolymerElements/test-fixture#^3.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "paper-input": "PolymerElements/paper-input#^1.1.20",
-    "paper-button": "PolymerElements/paper-button#^1.0.13",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.1",
-    "paper-fab-menu": "advanced-rest-client/paper-fab-menu#^2.0.4",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.8",
-    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
-    "app-pouchdb": "advanced-rest-client/app-pouchdb#^0.9.3"
+    "iron-component-page": "PolymerElements/iron-component-page#^3.0.1",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "iron-test-helpers": "PolymerElements/iron-test-helpers#^2.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.0",
+    "paper-fab-menu": "advanced-rest-client/paper-fab-menu#3.0.0-preview",
+    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "app-pouchdb": "PolymerElements/app-pouchdb#^2.0.0"
   },
   "ignore": [
     "**/.*",
@@ -41,6 +41,5 @@
     "bower_components",
     "test",
     "tasks"
-  ],
-  "version": "1.0.5"
+  ]
 }
