--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
   "name": "app-pouchdb-quick-search",
-  "version": "1.0.5",
-  "license": "Apache-2.0 OR CC-BY-4.0",
+  "version": "2.0.0",
+  "license": "Apache-2.0",
   "description": "Web component for the PouchDB's  plugin.",
   "devDependencies": {
-    "polymer-cli": "^1.2.0"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "@polymer/gen-typescript-declarations": "^1.1.1"
   },
   "private": false,
-  "main": [
-    "app-pouchdb-quick-search.html"
-  ],
-  "author": "The Advanced REST client authors",
+  "main": "app-pouchdb-quick-search.html",
   "scripts": {
-    "lint": "node_modules/.bin/polymer lint app-pouchdb-quick-search.html --rules polymer-1",
-    "test-sauce": "node_modules/.bin/polymer test --plugin sauce --job-name \"app-pouchdb-quick-search:local-test\"",
-    "test": "node_modules/.bin/polymer test --plugin local"
+    "lint": "polymer lint app-pouchdb-quick-search.html",
+    "test-sauce": "polymer test --plugin sauce --job-name \"app-pouchdb-quick-search:local-test\"",
+    "test": "polymer test --plugin local",
+    "update-types": "gen-typescript-declarations --deleteExisting --outDir ."
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/advanced-rest-client/app-pouchdb-quick-search.git"
-  }
+  },
+  "authors": [
+    "Pawel Psztyc",
+    "The Advanced REST client authors <arc@mulesoft.com>"
+  ]
 }
